[package]
name = "auth"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]

[dependencies]
# Serialization
serde = "*"
serde_derive = "*"
serde_json = "*"
rmp-serde = "*"

# Password checking
ring = "*"

# Command line parsing
clap = "*"

# Easy error generation
quick-error = "*"

# Logging
slog = "*"

# User password input
rpassword = "*"

# Web interface
rocket_codegen = "*"

[dependencies.rocket]
version = "*"
features = ["tls"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]
